# kagami-lang

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ast/: block.rs  func.rs  kagami_module.rs  mod.rs  stmt.rs
src/base/: pos.rs
src/parser/: error.rs  kagami.lalrpop  mod.rs  string_literal.rs
test/code/: 1.kgm  game1.kgm
tests/code/: 1.kgm  list.kgm
