[package]
name = "kagami"
version = "0.1.0"
authors = ["Yuxiang Liu <windrunner414@gmail.com>"]
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
panic = "abort"

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1.5.5"
anyhow = "1.0.56"
thiserror = "1.0.30"

[build-dependencies]
lalrpop = { version = "0.19.7", features = ["lexer"] }
